# django-training

./: pyproject.toml
musicplatform/: RESULTS.md
musicplatform/albums/: admin.py  apps.py  filters.py  forms.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  views.py
musicplatform/albums/migrations/: 0001_initial.py  0002_album_is_approved.py  0003_remove_album_creation_datetime_album_created_and_more.py  0004_alter_album_artist_song.py
musicplatform/albums/tests/: conftest.py  test_endpoints.py  test_serializers.py
musicplatform/artists/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
musicplatform/artists/migrations/: 0001_initial.py
musicplatform/artists/templates/artists/: create.html  list.html
musicplatform/artists/tests/: conftest.py  test_endpoints.py
musicplatform/authentication/: serializers.py  urls.py  views.py
musicplatform/authentication/tests/: conftest.py  test_endpoints.py
musicplatform/musicplatform/: celery.py  settings.py  urls.py
musicplatform/templates/: base_site.html
musicplatform/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_form.html
musicplatform/users/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
musicplatform/users/migrations/: 0001_initial.py
musicplatform/users/tests/: conftest.py  test_endpoints.py
