[tool.poetry]
name = "musicplatform"
version = "0.1.0"
description = ""
authors = ["arsany98 <arsanymaged13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.4"
django-model-utils = "^4.2.0"
django-imagekit = "^4.1.0"
pillow = "^9.3.0"
djangorestframework = "^3.14.0"
django-extensions = "^3.2.1"
django-rest-knox = "^4.2.0"
pytest-django = "^4.5.2"
django-filter = "^22.1"
celery = {extras = ["redis"], version = "^5.2.7"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
